# code-context-mcp

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  server.py
src/analyzer/: __init__.py  advanced.py  callgraph.py  optimization.py  patterns.py
src/context/: __init__.py  repo_map.py
src/indexer/: __init__.py  ast_parser.py  repository.py  symbol_extractor.py
