[project]
name = "code-context-mcp"
version = "1.0.0"
description = "MCP server for deep codebase understanding - gives LLMs complete project context"
requires-python = ">=3.10"

dependencies = [
    "mcp[cli]>=1.0.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "pathspec>=0.12.0",
    "pydantic>=2.0.0",
]

[project.scripts]
code-context = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
